[2단계 - 블랙잭 베팅] 종이(최우종) 미션 제출합니다. (#747)
* feat: 덱은 랜덤 카드를 뽑아낼 수 있다

* refactor: number를 denomination으로 변경

* feat: 끗수에 따른 적절한 값을 반환하는 기능 추가

* feat: 플레이어는 자신이 갖는 카드의 합계를 계산한다

* feat: 플레이어는 21을 넘을 경우 패배

* feat: 플레이어는 21을 넘을 경우 패배

* refactor: Ace의 값을 판단하는 로직 개선

* feat: 게임을 진행하는 도메인 구현

* feat: 입출력 구현

* feat: solotest

* feat: 승패 결과를 계산한다.

* refactor: 랜덤 카드 생성 역할 위임

* test: 플레이어 버스트 여부 반환 테스트

* style: TODO 추가

* test: 게임의 결과가 제대로 계산됐는지 확인

* refactor: 블랙잭게임 세팅 캡슐화

* feat: hashcode equals 재정의

* refactor: 변수명 변경

* test: 승패 결과 계산 테스트

* refactor: 승패 결과 계산 로직 분리

* feat: 출력형식에 맞춘 UI 변경

* refactor: 인덴트 개선

* refactor: 디미터 법칙 개선

* refactor: 원시값 이름을 클래스로 포장

* refactor: 플레이어를 추상클래스로 변경

* refactor: 블랙잭 게임 필드 수 2로 제한

* refactor: 딜러 이름 상수 분리

* fix: 계산이 제대로 안되는 버그 수정

* refactor: 함수 가독성 개선

* refactor: 덱 생성 로직 변경

* fix: 계산결과 로직 에러 수정

* feat: 참가자 수, 이름 중복 검증 기능 구현

* style: 코드 컨벤션 정리

* refactor: 부생성자 시그니쳐 변경

* style: 변수 및 메서드 네이밍 수정

* feat: 플레이어의 딜러 여부 반환 기능 구현

* refactor: 중복 검사 로직 개선

* style: 코드 가독성 개선

* style: 코드 가독성 개선

* refactor: 버그 픽스 및 책임 분리

* style: 메서드 순서 변경

* refactor: 코드 가독성 개선

* docs: 기능명세서 수정

* feat: 플레이어가 참가자인지 확인하는 기능

* refactor: 패키지화

* refactor: 승패 계산 로직 변경

* refactor: 덱에서 뽑을 때 마다 셔플하는 로직 개선

* feat: 플레이어의 이름이 딜러라면 예외가 발생한다

* refactor: 이름이 딜러라면 예외가 발생한다

* refactor: 플레이어의 이름이 딜러라면 예외가 발생한다

* feat: 사용자 이름이 비어 있으면 예외를 발생시킨다

* refactor: 카드 도메인 이름 수정

* feat: 사용자 이름은 5글자 이하만 가능

* refactor: deck 테스트 코드를 hands로 이동

* reafactor: 전체적인 구조 및 로직 개선

* test: 무승부일 때 테스트 추가

* test: 플레이어가 히트할 수 있는지 확인하는 테스트 추가

* test: 딜러가 히트할 수 있는지 확인하는 테스트 추가

* test: 딜러는 플레이어의 핸드를 보고 승패무를 결정한다

* test: 플레이어의 이름을 찾을 때 존재하지 않는 이름이라면 예외가 발생함

* test: blackjack의 테스트 추가

* feat: 참여자의 이름이 정해지지 않았다면 예외가 발생한다

* feat: 플레이어인지 확인하는 메서드

* feat: 딜러라는 이름은 사용할 수 없다

* feat: 딜러인지 확인하는 기능

* feat: dto추가 및 레이어간 의존성 제거

* refactor: 불필요한 메서드 제거
